Change medai query to fix error on overlapping content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,8 +200,7 @@ footer a {
         display: flex;
         justify-content: center;
         align-items: center;
-        max-width: 80rem;
-        margin: 0 auto;
+        margin: 0;
         padding: 2rem;
     }
     
